--- a/index.html
+++ b/index.html
@@ -1,110 +1,85 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>JS Bin</title>
-<style id="jsbin-css">
-#container {
-  margin: 50px auto;
-  padding: 20px;
-  border-radius: 20px;
-  width: 200px;
-  background-color: #f0b;
-  color: white;
-}
-#doki {
-  font-size: 50px;
-}
-</style>
-</head>
-<body>
-  <div id='container'>
-    <div id='date'></div>
-    <span id='doki'></span> doki
-  </div>
-  <div class='description'>
-    <p>"doki" is another internet time concept.</p>
-    <p>0 doki means 0:00 UTC.</p>
-    <p>240 doki is a day.</p>
-    <p>10 doki is an hour.</p>
-    <p>1 doki is 6 minutes.</p>
-    <p>0.1 doki is 1 minute.</p>
-    <p>10.3 doki + 4 minute = 11.1 doki.</p>
-  </div>
-<script id="jsbin-javascript">
-function getDoki(date){
-  return date.getUTCHours()*10 + Math.floor(date.getUTCMinutes()/6) + date.getUTCMinutes()%6 / 10;
-}
+<!doctype html>
+<!--
+  Material Design Lite
+  Copyright 2015 Google Inc. All rights reserved.
 
-function update(){
-  t = new Date();
-  month = t.getMonth();
-  date = t.getDate();
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
 
-  elem = document.getElementById('date');
-  elem.innerHTML= month + '/' + date;
+      https://www.apache.org/licenses/LICENSE-2.0
 
-  elem = document.getElementById('doki');
-  elem.innerHTML = getDoki(t);
-}
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License
+-->
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <title>doki is another internet time concept</title>
 
-update();
-setInterval(update, 1000);
-</script>
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
 
-<script id="jsbin-source-html" type="text/html"><!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>JS Bin</title>
-</head>
-<body>
-  <div id='container'>
-    <div id='date'></div>
-    <span id='doki'></span> doki
-  </div>
-  <div class='description'>
-    <p>"doki" is another internet time concept.</p>
-    <p>0 doki means 0:00 UTC.</p>
-    <p>240 doki is a day.</p>
-    <p>10 doki is an hour.</p>
-    <p>1 doki is 6 minutes.</p>
-    <p>0.1 doki is 1 minute.</p>
-    <p>10.3 doki + 4 minute = 11.1 doki.</p>
-  </div>
-</body>
-</html>
-</script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="demo-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
+      <header class="demo-header mdl-layout__header mdl-layout__header--scroll mdl-color--grey-100 mdl-color-text--grey-800">
+        <div class="mdl-layout__header-row">
+          <span class="mdl-layout-title">doki is another internet time concept</span>
+        </div>
+      </header>
+      <div class="demo-ribbon"></div>
+      <main class="demo-main mdl-layout__content">
+        <div class="demo-container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+            <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+              <div class="mdl-card__title mdl-card--expand">
+                current time is
+              </div>
+              <div class="mdl-card__supporting-text">
+                <span id='date'></span>
+                <h2><span id='doki'></span></h2>
+                doki
+              </div>
+            </div>
 
-<script id="jsbin-source-css" type="text/css">#container {
-  margin: 50px auto;
-  padding: 20px;
-  border-radius: 20px;
-  width: 200px;
-  background-color: #f0b;
-  color: white;
-}
-#doki {
-  font-size: 50px;
-}</script>
-
-<script id="jsbin-source-javascript" type="text/javascript">function getDoki(date){
-  return date.getUTCHours()*10 + Math.floor(date.getUTCMinutes()/6) + date.getUTCMinutes()%6 / 10;
-}
-
-function update(){
-  t = new Date();
-  month = t.getMonth();
-  date = t.getDate();
-
-  elem = document.getElementById('date');
-  elem.innerHTML= month + '/' + date;
-
-  elem = document.getElementById('doki');
-  elem.innerHTML = getDoki(t);
-}
-
-update();
-setInterval(update, 1000);
-</script></body>
+            <section class='concept'>
+              <h3>Concept</h3>
+              <p><b>doki</b> is designed for easy scheduling over countries.</p>
+              <p><b>doki</b> is always UTC. Same doki means same time all over the world.</p>
+              <p>The first letter indicates week in UTC.</p>
+              <p>M T W T F S D</p>
+              <p>D means Sunday (because it starts with D in major European languages)</p>
+              <p><b>10 doki</b> is an hour.</p>
+              <p><b>1 doki</b> is 6 minutes.</p>
+              <p><b>:1 doki</b> is 1 minute.</p>
+            </section>
+            <section class='example'>
+              <h3>Examples</h3>
+              <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp">
+                <tr><td>08:00 (+00:00) Tuesday</td><td>T080 doki</td></tr>
+                <tr><td>09:30 (+00:00) Sunday</td> <td>D095 doki</td></tr>
+                <tr><td>23:59 (+00:00) Saturday</td><td>S239:5 doki</td></tr>
+                <tr><td>08:12 (+01:00) Tuesday</td><td>T072 doki</td></tr>
+                <tr><td>08:00 (+09:00) Tuesday</td><td>M230 doki</td></tr>
+              </dl>
+            </section>
+          </div>
+        </div>
+      </main>
+    </div>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src='doki.js'></script>
+  </body>
 </html>
