change week letters

--- a/index.html
+++ b/index.html
@@ -58,12 +58,19 @@
               <h3>Concept</h3>
               <p><b>doki</b> is designed for easy scheduling over countries.</p>
               <p><b>doki</b> is always UTC. Same doki means same time all over the world.</p>
-              <p>The first letter indicates week in UTC.</p>
-              <p>M T W T F S D</p>
-              <p>D means Sunday (because it starts with D in major European languages)</p>
               <p><b>10 doki</b> is an hour.</p>
               <p><b>1 doki</b> is 6 minutes.</p>
               <p><b>:1 doki</b> is 1 minute.</p>
+              <p>The first letter indicates week in UTC.</p>
+              <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp">
+                <tr><th>M</th><td>Monday</td></tr>
+                <tr><th>T</th><td>Tuesday</td></tr>
+                <tr><th>W</th><td>Wednesday</td></tr>
+                <tr><th>R</th><td>thuRsday</td></tr>
+                <tr><th>F</th><td>Friday</td></tr>
+                <tr><th>S</th><td>Satday</td></tr>
+                <tr><th>U</th><td>sUnday</td></tr>
+              </table>
             </section>
             <section class='example'>
               <h3>Examples</h3>
@@ -71,9 +78,9 @@
                 <tr><td>08:00 (+00:00) Tuesday</td><td>T080 doki</td></tr>
                 <tr><td>09:30 (+00:00) Sunday</td> <td>D095 doki</td></tr>
                 <tr><td>23:59 (+00:00) Saturday</td><td>S239:5 doki</td></tr>
-                <tr><td>08:12 (+01:00) Tuesday</td><td>T072 doki</td></tr>
+                <tr><td>08:12 (+01:00) Thursday</td><td>R072 doki</td></tr>
                 <tr><td>08:00 (+09:00) Tuesday</td><td>M230 doki</td></tr>
-              </dl>
+              </table>
             </section>
           </div>
         </div>
