--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </section>
             <section class='example'>
               <h3>Examples</h3>
-              <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp">
+              <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
                 <tr><td>08:00 (+00:00) Tuesday</td><td>T080 doki</td></tr>
                 <tr><td>09:30 (+00:00) Sunday</td> <td>D095 doki</td></tr>
                 <tr><td>23:59 (+00:00) Saturday</td><td>S239:5 doki</td></tr>
