--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <p><b>1 doki</b> is 6 minutes.</p>
               <p><b>:1 doki</b> is 1 minute.</p>
               <p>The first letter indicates week in UTC.</p>
-              <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp">
+              <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
                 <tr><th>M</th><td>Monday</td></tr>
                 <tr><th>T</th><td>Tuesday</td></tr>
                 <tr><th>W</th><td>Wednesday</td></tr>
