add github icon

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
       </div>
     </section>
   </main>
+  <footer class="text-align:center">
+    <a href="https://github.com/kuboon/doki">
+      <img src="./github-mark.svg" alt="GitHub" width="32" height="32">
+    </a>
+  </footer>
 
   <script type="module">
     import { Doki } from './doki.js'
